Revert fixes for continuous build that didn't work
This reverts commits:

 * 255669f5d8a1aa52cd82ef27ed1ca587edd1c5da
 * 026161a1fdcf351d18f837a3f11153bcd2825d57

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "vellum-book",
   "version": "0.0.0",
   "scripts": {
-    "build": "eleventy",
+    "build": "npx @11ty/eleventy",
     "clean": "rimraf _site",
-    "start": "eleventy --serve --quiet",
+    "start": "npx @11ty/eleventy --serve --quiet",
     "predeploy": "npm run clean && npm run build && npm run test",
     "deploy": "gh-pages -d dist -b gh-pages -t",
     "test": "htmlhint _site/**/*.html && markdownlint *.md sections/** && stylelint 'assets/styles/**/*.css'"
