--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "vellum-book",
-  "version": "0.1.0",
+  "version": "0.2.0",
+  "author": {
+    "name": "Your Name",
+    "email": "you@example.com",
+    "url": "https://example.com/"
+  },
   "scripts": {
     "build": "npx @11ty/eleventy",
     "clean": "rimraf _site",
