--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "test": "htmlhint _site/**/*.html && markdownlint *.md sections/** && stylelint 'assets/styles/**/*.css'"
   },
   "dependencies": {
-    "link-preview": "^0.0.0",
+    "@grislyeye/link-preview": "^0.0.0",
     "vellum-doc": "^0.10.0"
   },
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
+    "cheerio": "^1.0.0-rc.12",
     "gh-pages": "^6.1.1",
     "htmlhint": "^1.1.4",
     "magick.css": "^1.0.6",
-    "markdownlint-cli": "^0.41.0",
     "markdown-it-replace-link": "^1.2.1",
+    "markdownlint-cli": "^0.41.0",
     "normalize.css": "^8.0.1",
     "rimraf": "^6.0.1",
     "stylelint": "^16.7.0",
