--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "start": "npx @11ty/eleventy --serve --quiet",
     "predeploy": "npm run clean && npm run build && npm run test",
     "deploy": "gh-pages -d dist -b gh-pages -t",
-    "test": "htmlhint _site/**/*.html && markdownlint *.md sections/** && stylelint 'assets/styles/**/*.css'"
+    "lint": "npx prettier . --check && npx stylelint 'assets/styles/**/*.css'",
+    "lint:fix": "npx prettier . --write",
+    "test": "npm run lint && htmlhint _site/**/*.html"
   },
   "dependencies": {
     "@grislyeye/link-preview": "^0.0.2",
@@ -26,7 +28,7 @@
     "gh-pages": "^6.1.1",
     "htmlhint": "^1.1.4",
     "markdown-it-replace-link": "^1.2.1",
-    "markdownlint-cli": "^0.41.0",
+    "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
     "stylelint": "^16.8.1",
     "stylelint-config-standard": "^36.0.1"
