--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
     "vellum-doc": "^0.10.0"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^2.0.1",
-    "cheerio": "^1.0.0-rc.12",
-    "gh-pages": "^6.1.1",
+    "@11ty/eleventy": "^3.0.0",
+    "cheerio": "^1.0.0",
+    "gh-pages": "^6.3.0",
     "htmlhint": "^1.1.4",
-    "markdown-it-replace-link": "^1.2.1",
-    "prettier": "^3.3.3",
+    "markdown-it-replace-link": "^1.2.2",
+    "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
-    "stylelint": "^16.8.1",
-    "stylelint-config-standard": "^36.0.1"
+    "stylelint": "^16.19.1",
+    "stylelint-config-standard": "^38.0.0"
   }
 }
