Refactor: simplify with single page document

--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -1,9 +1,6 @@
-name: test-and-lint
+name: test-and-lint-pr
 
 on:
-  push:
-    branches:
-      - "main"
   pull_request:
 
 jobs:
@@ -19,4 +16,8 @@ jobs:
           cache: "npm"
       - run: npm ci
       - run: npm run build
-      - run: npm test
+      - name: Check grammar and spelling
+        uses: reviewdog/action-languagetool@ea19c757470ce0dbfcbc34aec090317cef1ff0b5 # v1.22.0
+        with:
+          github_token: ${{ secrets.github_token }}
+          language: "en-GB"
