--- a/package.json
+++ b/package.json
@@ -6,31 +6,54 @@
     "email": "you@example.com",
     "url": "https://example.com/"
   },
-  "scripts": {
-    "build": "npx @11ty/eleventy",
-    "clean": "rimraf _site",
-    "start": "npx @11ty/eleventy --serve --quiet",
-    "predeploy": "npm run clean && npm run build && npm run test",
-    "deploy": "gh-pages -d dist -b gh-pages -t",
-    "lint": "npx prettier . --check && npx stylelint 'assets/styles/**/*.css'",
-    "lint:fix": "npx prettier . --write",
-    "test": "npm run lint && htmlhint _site/**/*.html"
-  },
   "dependencies": {
     "@grislyeye/link-preview": "^0.0.3",
+    "liquidjs": "^10.24.0",
     "magick.css": "^1.0.6",
     "normalize.css": "^8.0.1",
     "vellum-doc": "^0.10.1"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^3.1.2",
-    "cheerio": "^1.1.2",
+    "browser-sync": "^3.0.4",
     "gh-pages": "^6.3.0",
-    "htmlhint": "^1.7.1",
-    "markdown-it-replace-link": "^1.2.2",
-    "prettier": "^3.6.2",
-    "rimraf": "^6.0.1",
-    "stylelint": "^16.25.0",
-    "stylelint-config-standard": "^39.0.1"
+    "htmlhint": "^1.8.0",
+    "linkinator": "^7.5.3",
+    "marked": "^17.0.1",
+    "npm-watch": "^0.13.0",
+    "prettier": "^3.8.1",
+    "rimraf": "^6.1.2",
+    "stylelint": "^17.0.0",
+    "stylelint-config-standard": "^40.0.0"
+  },
+  "scripts": {
+    "build": "mkdir -p dist && npm run build:dist",
+    "build:dist": "mkdir -p dist && node index.js > dist/index.html && npm run build:assets && npm run build:modules",
+    "build:watch": "npm-watch",
+    "build:assets": "cp -r assets dist/",
+    "build:modules": "mkdir -p dist/vendor && cp -r node_modules/vellum-doc dist/vendor/vellum-doc/ && cp -r node_modules/magick.css/ dist/vendor/magick.css/",
+    "clean": "rm -r dist",
+    "lint": "npx prettier . --check && npx htmlhint dist/index.html",
+    "lint:fix": "npx prettier . --write",
+    "test": "npm run lint && npm run test:links",
+    "test:pr": "npm run lint && npm run test:links:soft",
+    "test:links": "linkinator --check-fragments dist/index.html",
+    "test:links:soft": "linkinator --check-fragments --status-code '404:warn' dist/index.html",
+    "start": "npm run build && npm run start:server",
+    "start:server": "browser-sync start --server --files dist --ss dist"
+  },
+  "watch": {
+    "build": {
+      "patterns": [
+        "**/*"
+      ],
+      "extensions": "md,html,css,liquid",
+      "ignore": [
+        "node_module",
+        "dist"
+      ]
+    }
+  },
+  "document": {
+    "title": "Book Title"
   }
 }
