--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vellum-doc": "^0.10.1"
   },
   "devDependencies": {
+    "@shopify/prettier-plugin-liquid": "^1.10.0",
     "browser-sync": "^3.0.4",
     "gh-pages": "^6.3.0",
     "htmlhint": "^1.8.0",
