--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vellum-book",
-  "version": "0.3.2",
+  "version": "0.4.0",
   "author": {
     "name": "Your Name",
     "email": "you@example.com",
@@ -20,6 +20,7 @@
     "htmlhint": "^1.8.0",
     "linkinator": "^7.5.3",
     "marked": "^17.0.1",
+    "marked-footnote": "^1.4.0",
     "npm-watch": "^0.13.0",
     "prettier": "^3.8.1",
     "rimraf": "^6.1.2",
