--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "marked": "^17.0.1",
     "marked-alert": "^2.1.2",
     "marked-footnote": "^1.4.0",
+    "marked-magickcss-sidenote": "^0.0.0",
     "npm-watch": "^0.13.0",
     "prettier": "^3.8.1",
     "rimraf": "^6.1.2",
