--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "htmlhint": "^1.8.0",
     "linkinator": "^7.5.3",
     "marked": "^17.0.1",
+    "marked-alert": "^2.1.2",
     "marked-footnote": "^1.4.0",
+    "marked-magickcss-sidenote": "^0.0.0",
     "npm-watch": "^0.13.0",
     "prettier": "^3.8.1",
     "rimraf": "^6.1.2",
