--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "build:dist": "mkdir -p dist && node index.js > dist/index.html && npm run build:assets && npm run build:modules",
     "build:watch": "npm-watch",
     "build:assets": "cp -r assets dist/",
-    "build:modules": "mkdir -p dist/vendor && cp -r node_modules/vellum-doc dist/vendor/vellum-doc/ && cp -r node_modules/magick.css/ dist/vendor/magick.css/",
+    "build:modules": "mkdir -p dist/vendor && cp -r node_modules/vellum-doc dist/vendor/vellum-doc/ && cp -r node_modules/magick.css/ dist/vendor/magick.css && cp -r node_modules/normalize.css/ dist/vendor/normalize.css/",
     "clean": "rm -r dist",
     "lint": "npx prettier . --check && npx htmlhint dist/index.html",
     "lint:fix": "npx prettier . --write",
