--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vellum-book",
-  "version": "0.4.3",
+  "version": "0.4.4",
   "type": "module",
   "author": {
     "name": "Your Name",
@@ -23,6 +23,7 @@
     "jsdom": "^28.0.0",
     "linkinator": "^7.5.3",
     "marked": "^17.0.1",
+    "marked-gfm-heading-id": "^4.1.3",
     "marked-magickcss-sidenote": "^0.0.3",
     "npm-watch": "^0.13.0",
     "prettier": "^3.8.1",
