Revert "[fixup] Remove: unstable link"
This reverts commit 3950d18d5b853eaca2f4626a63123043d72ac076.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "type": "module",
   "author": {
     "name": "Your Name",
-    "email": "you@example.net",
-    "url": "https://example.net/"
+    "email": "you@example.org",
+    "url": "https://example.org/"
   },
   "dependencies": {
     "@grislyeye/link-preview": "^0.0.3",
