--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "type": "module",
   "author": {
     "name": "Your Name",
-    "email": "you@example.org",
-    "url": "https://example.org/"
+    "email": "you@example.com",
+    "url": "https://example.com/"
   },
   "dependencies": {
     "@grislyeye/link-preview": "^0.0.3",
