--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "email": "you@example.com",
     "url": "https://example.com/"
   },
-  "engines" : {
-    "node" : ">=25.0.0"
+  "engines": {
+    "node": ">=25.0.0"
   },
   "dependencies": {
     "@grislyeye/link-preview": "^0.0.3",
@@ -44,8 +44,8 @@
     "lint": "npx prettier . --check && npx htmlhint dist/index.html",
     "lint:fix": "npx prettier . --write",
     "test": "npm run lint && npm run test:links",
-    "test:pr": "npm run lint && npm run test:links:soft",
-    "test:links": "linkinator --check-fragments dist/index.html",
+    "test:pr": "npm run lint && npm run test:links:soft --skip example.com",
+    "test:links": "linkinator --check-fragments dist/index.html --skip example.com",
     "test:links:soft": "linkinator --check-fragments --status-code '404:warn' dist/index.html",
     "start": "npm run build && npm run start:server",
     "start:server": "browser-sync start --server --files dist --ss dist"
